--- a/Unit-1/Date/1.Article.md
+++ b/Unit-1/Date/1.Article.md
@@ -1,433 +1,268 @@
-# Date and time
+# Date and Time
 
-Let's meet a new built-in object: [Date](mdn:js/Date). It stores the date, time and provides methods for date/time management.
+JavaScript has a special object called `Date` that handles dates and times. You can use it to:
+* Show the current date and time
+* Store when something was created
+* Calculate how much time has passed
+* Work with dates in your programs
 
-For instance, we can use it to store creation/modification times, to measure time, or just to print out the current date.
+## Creating Date Objects
 
-## Creation
+There are several ways to create a date. Let's start with the simplest:
 
-To create a new `Date` object call `new Date()` with one of the following arguments:
-
-`new Date()`
-: Without arguments -- create a `Date` object for the current date and time:
-
-    ```js run
-    let now = new Date();
-    alert( now ); // shows current date/time
-    ```
-
-`new Date(milliseconds)`
-: Create a `Date` object with the time equal to number of milliseconds (1/1000 of a second) passed after the Jan 1st of 1970 UTC+0.
-
-    ```js run
-    // 0 means 01.01.1970 UTC+0
-    let Jan01_1970 = new Date(0);
-    alert( Jan01_1970 );
-
-    // now add 24 hours, get 02.01.1970 UTC+0
-    let Jan02_1970 = new Date(24 * 3600 * 1000);
-    alert( Jan02_1970 );
-    ```
-
-    An integer number representing the number of milliseconds that has passed since the beginning of 1970 is called a *timestamp*.
-
-    It's a lightweight numeric representation of a date. We can always create a date from a timestamp using `new Date(timestamp)` and convert the existing `Date` object to a timestamp using the `date.getTime()` method (see below).
-
-    Dates before 01.01.1970 have negative timestamps, e.g.:
-    ```js run
-    // 31 Dec 1969
-    let Dec31_1969 = new Date(-24 * 3600 * 1000);
-    alert( Dec31_1969 );
-    ```
-
-`new Date(datestring)`
-: If there is a single argument, and it's a string, then it is parsed automatically. The algorithm is the same as `Date.parse` uses, we'll cover it later.
-
-    ```js run
-    let date = new Date("2017-01-26");
-    alert(date);
-    // The time is not set, so it's assumed to be midnight GMT and
-    // is adjusted according to the timezone the code is run in
-    // So the result could be
-    // Thu Jan 26 2017 11:00:00 GMT+1100 (Australian Eastern Daylight Time)
-    // or
-    // Wed Jan 25 2017 16:00:00 GMT-0800 (Pacific Standard Time)
-    ```
-
-`new Date(year, month, date, hours, minutes, seconds, ms)`
-: Create the date with the given components in the local time zone. Only the first two arguments are obligatory.
-
-    - The `year` should have 4 digits. For compatibility, 2 digits are also accepted and considered `19xx`, e.g. `98` is the same as `1998` here, but always using 4 digits is strongly encouraged.
-    - The `month` count starts with `0` (Jan), up to `11` (Dec).
-    - The `date` parameter is actually the day of month, if absent then `1` is assumed.
-    - If `hours/minutes/seconds/ms` is absent, they are assumed to be equal `0`.
-
-    For instance:
-
-    ```js
-    new Date(2011, 0, 1, 0, 0, 0, 0); // 1 Jan 2011, 00:00:00
-    new Date(2011, 0, 1); // the same, hours etc are 0 by default
-    ```
-
-    The maximal precision is 1 ms (1/1000 sec):
-
-    ```js run
-    let date = new Date(2011, 0, 1, 2, 3, 4, 567);
-    alert( date ); // 1.01.2011, 02:03:04.567
-    ```
-
-## Access date components
-
-There are methods to access the year, month and so on from the `Date` object:
-
-[getFullYear()](mdn:js/Date/getFullYear)
-: Get the year (4 digits)
-
-[getMonth()](mdn:js/Date/getMonth)
-: Get the month, **from 0 to 11**.
-
-[getDate()](mdn:js/Date/getDate)
-: Get the day of month, from 1 to 31, the name of the method does look a little bit strange.
-
-[getHours()](mdn:js/Date/getHours), [getMinutes()](mdn:js/Date/getMinutes), [getSeconds()](mdn:js/Date/getSeconds), [getMilliseconds()](mdn:js/Date/getMilliseconds)
-: Get the corresponding time components.
-
-```warn header="Not `getYear()`, but `getFullYear()`"
-Many JavaScript engines implement a non-standard method `getYear()`. This method is deprecated. It returns 2-digit year sometimes. Please never use it. There is `getFullYear()` for the year.
+**Get the current date and time:**
+```js
+let now = new Date();
+alert( now ); // shows today's date and time
 ```
 
-Additionally, we can get a day of week:
+**Create a date from milliseconds:**
+JavaScript counts time in milliseconds (thousandths of a second) since January 1, 1970. This number is called a "timestamp".
 
-[getDay()](mdn:js/Date/getDay)
-: Get the day of week, from `0` (Sunday) to `6` (Saturday). The first day is always Sunday, in some countries that's not so, but can't be changed.
+```js
+// January 1, 1970 at midnight
+let Jan01_1970 = new Date(0);
+alert( Jan01_1970 );
 
-**All the methods above return the components relative to the local time zone.**
+// Add 24 hours (24 hours × 60 minutes × 60 seconds × 1000 milliseconds)
+let Jan02_1970 = new Date(24 * 3600 * 1000);
+alert( Jan02_1970 );
+```
 
-There are also their UTC-counterparts, that return day, month, year and so on for the time zone UTC+0: [getUTCFullYear()](mdn:js/Date/getUTCFullYear), [getUTCMonth()](mdn:js/Date/getUTCMonth), [getUTCDay()](mdn:js/Date/getUTCDay). Just insert the `"UTC"` right after `"get"`.
+Dates before 1970 have negative timestamps:
+```js
+// December 31, 1969
+let Dec31_1969 = new Date(-24 * 3600 * 1000);
+alert( Dec31_1969 );
+```
 
-If your local time zone is shifted relative to UTC, then the code below shows different hours:
+**Create a date from a string:**
+```js
+let date = new Date("2017-01-26");
+alert(date);
+```
 
-```js run
-// current date
+The string gets converted automatically. The time defaults to midnight, and JavaScript adjusts it to your timezone.
+
+**Create a date with specific parts:**
+```js
+new Date(year, month, date, hours, minutes, seconds, milliseconds)
+```
+
+Important things to remember:
+* Year needs 4 digits (like 2024, not 24)
+* Month starts at 0! January is 0, February is 1, December is 11
+* Day of month is 1-31
+* Hours, minutes, seconds, and milliseconds are optional (default to 0)
+
+Examples:
+```js
+new Date(2011, 0, 1, 0, 0, 0, 0); // Jan 1, 2011, midnight
+new Date(2011, 0, 1); // same thing (hours default to 0)
+
+let date = new Date(2011, 0, 1, 2, 3, 4, 567);
+alert( date ); // 1.01.2011, 02:03:04.567
+```
+
+## Getting Date Information
+
+Once you have a date object, you can get information from it:
+
+**Get the year (4 digits):**
+```js
 let date = new Date();
-
-// the hour in your current time zone
-alert( date.getHours() );
-
-// the hour in UTC+0 time zone (London time without daylight savings)
-alert( date.getUTCHours() );
+alert( date.getFullYear() ); // 2024 (or whatever year it is)
 ```
 
-Besides the given methods, there are two special ones that do not have a UTC-variant:
+**Get the month (0-11):**
+```js
+alert( date.getMonth() ); // 0 for January, 11 for December
+```
 
-[getTime()](mdn:js/Date/getTime)
-: Returns the timestamp for the date -- a number of milliseconds passed from the January 1st of 1970 UTC+0.
+**Get the day of month (1-31):**
+```js
+alert( date.getDate() ); // 1 to 31
+```
 
-[getTimezoneOffset()](mdn:js/Date/getTimezoneOffset)
-: Returns the difference between UTC and the local time zone, in minutes:
+**Get time parts:**
+```js
+alert( date.getHours() );    // 0 to 23
+alert( date.getMinutes() );   // 0 to 59
+alert( date.getSeconds() );   // 0 to 59
+alert( date.getMilliseconds() ); // 0 to 999
+```
 
-    ```js run
-    // if you are in timezone UTC-1, outputs 60
-    // if you are in timezone UTC+3, outputs -180
-    alert( new Date().getTimezoneOffset() );
+**Get the day of week (0-6):**
+```js
+alert( date.getDay() ); // 0 = Sunday, 1 = Monday, ..., 6 = Saturday
+```
 
-    ```
+All these methods give you the time in YOUR timezone. If you want UTC time (Greenwich time), add "UTC" after "get":
 
-## Setting date components
+```js
+alert( date.getHours() );     // your local time
+alert( date.getUTCHours() );  // UTC time (London time)
+```
 
-The following methods allow to set date/time components:
+**Get the timestamp:**
+```js
+alert( date.getTime() ); // milliseconds since Jan 1, 1970
+```
 
-- [`setFullYear(year, [month], [date])`](mdn:js/Date/setFullYear)
-- [`setMonth(month, [date])`](mdn:js/Date/setMonth)
-- [`setDate(date)`](mdn:js/Date/setDate)
-- [`setHours(hour, [min], [sec], [ms])`](mdn:js/Date/setHours)
-- [`setMinutes(min, [sec], [ms])`](mdn:js/Date/setMinutes)
-- [`setSeconds(sec, [ms])`](mdn:js/Date/setSeconds)
-- [`setMilliseconds(ms)`](mdn:js/Date/setMilliseconds)
-- [`setTime(milliseconds)`](mdn:js/Date/setTime) (sets the whole date by milliseconds since 01.01.1970 UTC)
+**Get timezone offset:**
+```js
+alert( new Date().getTimezoneOffset() ); 
+// difference between UTC and your timezone in minutes
+```
 
-Every one of them except `setTime()` has a UTC-variant, for instance: `setUTCHours()`.
+## Changing Date Information
 
-As we can see, some methods can set multiple components at once, for example `setHours`. The components that are not mentioned are not modified.
+You can change parts of a date:
 
-For instance:
-
-```js run
+```js
 let today = new Date();
 
-today.setHours(0);
-alert(today); // still today, but the hour is changed to 0
+today.setHours(0); // set hour to 0 (midnight)
+alert(today); // same day, but at midnight
 
-today.setHours(0, 0, 0, 0);
-alert(today); // still today, now 00:00:00 sharp.
+today.setHours(0, 0, 0, 0); // set hours, minutes, seconds, milliseconds all to 0
+alert(today); // exactly midnight: 00:00:00.000
 ```
 
-## Autocorrection
+Other methods:
+* `setFullYear(year, month, date)`
+* `setMonth(month, date)`
+* `setDate(date)`
+* `setHours(hour, min, sec, ms)`
+* `setMinutes(min, sec, ms)`
+* `setSeconds(sec, ms)`
+* `setMilliseconds(ms)`
+* `setTime(milliseconds)` - sets the whole date
 
-The *autocorrection* is a very handy feature of `Date` objects. We can set out-of-range values, and it will auto-adjust itself.
+Each has a UTC version too (like `setUTCHours()`).
 
-For instance:
+## Automatic Date Correction
 
-```js run
-let date = new Date(2013, 0, *!*32*/!*); // 32 Jan 2013 ?!?
-alert(date); // ...is 1st Feb 2013!
+Here's something cool: JavaScript automatically fixes invalid dates!
+
+```js
+let date = new Date(2013, 0, 32); // 32nd of January? That doesn't exist!
+alert(date); // JavaScript fixes it to February 1, 2013!
 ```
 
-Out-of-range date components are distributed automatically.
+This makes it easy to add days. Want to add 2 days to a date? Just do it:
 
-Let's say we need to increase the date "28 Feb 2016" by 2 days. It may be "2 Mar" or "1 Mar" in case of a leap-year. We don't need to think about it. Just add 2 days. The `Date` object will do the rest:
-
-```js run
-let date = new Date(2016, 1, 28);
-*!*
-date.setDate(date.getDate() + 2);
-*/!*
-
-alert( date ); // 1 Mar 2016
+```js
+let date = new Date(2016, 1, 28); // Feb 28, 2016
+date.setDate(date.getDate() + 2); // add 2 days
+alert( date ); // March 1, 2016 (or March 2 if it's a leap year)
 ```
 
-That feature is often used to get the date after the given period of time. For instance, let's get the date for "70 seconds after now":
+JavaScript handles leap years and month boundaries automatically!
 
-```js run
+You can even use zero or negative numbers:
+```js
+let date = new Date(2016, 0, 2); // Jan 2, 2016
+
+date.setDate(1); // set to day 1
+alert( date ); // Jan 1, 2016
+
+date.setDate(0); // day 0 means last day of previous month
+alert( date ); // Dec 31, 2015
+```
+
+## Comparing Dates and Measuring Time
+
+When you convert a date to a number, it becomes a timestamp:
+
+```js
 let date = new Date();
-date.setSeconds(date.getSeconds() + 70);
-
-alert( date ); // shows the correct date
+alert(+date); // same as date.getTime()
 ```
 
-We can also set zero or even negative values. For example:
+This means you can subtract dates to find the difference:
 
-```js run
-let date = new Date(2016, 0, 2); // 2 Jan 2016
+```js
+let start = new Date(); // start time
 
-date.setDate(1); // set day 1 of month
-alert( date );
-
-date.setDate(0); // min day is 1, so the last day of the previous month is assumed
-alert( date ); // 31 Dec 2015
-```
-
-## Date to number, date diff
-
-When a `Date` object is converted to number, it becomes the timestamp same as `date.getTime()`:
-
-```js run
-let date = new Date();
-alert(+date); // the number of milliseconds, same as date.getTime()
-```
-
-The important side effect: dates can be subtracted, the result is their difference in ms.
-
-That can be used for time measurements:
-
-```js run
-let start = new Date(); // start measuring time
-
-// do the job
+// do some work
 for (let i = 0; i < 100000; i++) {
   let doSomething = i * i * i;
 }
 
-let end = new Date(); // end measuring time
+let end = new Date(); // end time
+
+alert( `The loop took ${end - start} ms` ); // difference in milliseconds
+```
+
+## Date.now() - Quick Timestamp
+
+If you just want the current timestamp (not a full date object), use `Date.now()`:
+
+```js
+let start = Date.now(); // current timestamp
+
+// do some work
+for (let i = 0; i < 100000; i++) {
+  let doSomething = i * i * i;
+}
+
+let end = Date.now(); // new timestamp
 
 alert( `The loop took ${end - start} ms` );
 ```
 
-## Date.now()
+This is faster than creating a Date object because it just gives you a number.
 
-If we only want to measure time, we don't need the `Date` object.
+## Parsing Dates from Strings
 
-There's a special method `Date.now()` that returns the current timestamp.
+You can create a date from a string using `Date.parse()`:
 
-It is semantically equivalent to `new Date().getTime()`, but it doesn't create an intermediate `Date` object. So it's faster and doesn't put pressure on garbage collection.
+The format is: `YYYY-MM-DDTHH:mm:ss.sssZ`
 
-It is used mostly for convenience or when performance matters, like in games in JavaScript or other specialized applications.
+Where:
+* `YYYY-MM-DD` is the date
+* `T` separates date and time
+* `HH:mm:ss.sss` is the time
+* `Z` means UTC timezone (or use `+05:30` for other timezones)
 
-So this is probably better:
-
-```js run
-*!*
-let start = Date.now(); // milliseconds count from 1 Jan 1970
-*/!*
-
-// do the job
-for (let i = 0; i < 100000; i++) {
-  let doSomething = i * i * i;
-}
-
-*!*
-let end = Date.now(); // done
-*/!*
-
-alert( `The loop took ${end - start} ms` ); // subtract numbers, not dates
-```
-
-## Benchmarking
-
-If we want a reliable benchmark of CPU-hungry function, we should be careful.
-
-For instance, let's measure two functions that calculate the difference between two dates: which one is faster?
-
-Such performance measurements are often called "benchmarks".
+Shorter formats work too: `YYYY-MM-DD` or just `YYYY-MM` or `YYYY`.
 
 ```js
-// we have date1 and date2, which function faster returns their difference in ms?
-function diffSubtract(date1, date2) {
-  return date2 - date1;
-}
-
-// or
-function diffGetTime(date1, date2) {
-  return date2.getTime() - date1.getTime();
-}
-```
-
-These two do exactly the same thing, but one of them uses an explicit `date.getTime()` to get the date in ms, and the other one relies on a date-to-number transform. Their result is always the same.
-
-So, which one is faster?
-
-The first idea may be to run them many times in a row and measure the time difference. For our case, functions are very simple, so we have to do it at least 100000 times.
-
-Let's measure:
-
-```js run
-function diffSubtract(date1, date2) {
-  return date2 - date1;
-}
-
-function diffGetTime(date1, date2) {
-  return date2.getTime() - date1.getTime();
-}
-
-function bench(f) {
-  let date1 = new Date(0);
-  let date2 = new Date();
-
-  let start = Date.now();
-  for (let i = 0; i < 100000; i++) f(date1, date2);
-  return Date.now() - start;
-}
-
-alert( 'Time of diffSubtract: ' + bench(diffSubtract) + 'ms' );
-alert( 'Time of diffGetTime: ' + bench(diffGetTime) + 'ms' );
-```
-
-Wow! Using `getTime()` is so much faster! That's because there's no type conversion, it is much easier for engines to optimize.
-
-Okay, we have something. But that's not a good benchmark yet.
-
-Imagine that at the time of running `bench(diffSubtract)` CPU was doing something in parallel, and it was taking resources. And by the time of running `bench(diffGetTime)` that work has finished.
-
-A pretty real scenario for a modern multi-process OS.
-
-As a result, the first benchmark will have less CPU resources than the second. That may lead to wrong results.
-
-**For more reliable benchmarking, the whole pack of benchmarks should be rerun multiple times.**
-
-For example, like this:
-
-```js run
-function diffSubtract(date1, date2) {
-  return date2 - date1;
-}
-
-function diffGetTime(date1, date2) {
-  return date2.getTime() - date1.getTime();
-}
-
-function bench(f) {
-  let date1 = new Date(0);
-  let date2 = new Date();
-
-  let start = Date.now();
-  for (let i = 0; i < 100000; i++) f(date1, date2);
-  return Date.now() - start;
-}
-
-let time1 = 0;
-let time2 = 0;
-
-*!*
-// run bench(diffSubtract) and bench(diffGetTime) each 10 times alternating
-for (let i = 0; i < 10; i++) {
-  time1 += bench(diffSubtract);
-  time2 += bench(diffGetTime);
-}
-*/!*
-
-alert( 'Total time for diffSubtract: ' + time1 );
-alert( 'Total time for diffGetTime: ' + time2 );
-```
-
-Modern JavaScript engines start applying advanced optimizations only to "hot code" that executes many times (no need to optimize rarely executed things). So, in the example above, first executions are not well-optimized. We may want to add a heat-up run:
-
-```js
-// added for "heating up" prior to the main loop
-bench(diffSubtract);
-bench(diffGetTime);
-
-// now benchmark
-for (let i = 0; i < 10; i++) {
-  time1 += bench(diffSubtract);
-  time2 += bench(diffGetTime);
-}
-```
-
-```warn header="Be careful doing microbenchmarking"
-Modern JavaScript engines perform many optimizations. They may tweak results of "artificial tests" compared to "normal usage", especially when we benchmark something very small, such as how an operator works, or a built-in function. So if you seriously want to understand performance, then please study how the JavaScript engine works. And then you probably won't need microbenchmarks at all.
-
-The great pack of articles about V8 can be found at <https://mrale.ph>.
-```
-
-## Date.parse from a string
-
-The method [Date.parse(str)](mdn:js/Date/parse) can read a date from a string.
-
-The string format should be: `YYYY-MM-DDTHH:mm:ss.sssZ`, where:
-
-- `YYYY-MM-DD` -- is the date: year-month-day.
-- The character `"T"` is used as the delimiter.
-- `HH:mm:ss.sss` -- is the time: hours, minutes, seconds and milliseconds.
-- The optional `'Z'` part denotes the time zone in the format `+-hh:mm`. A single letter `Z` would mean UTC+0.
-
-Shorter variants are also possible, like `YYYY-MM-DD` or `YYYY-MM` or even `YYYY`.
-
-The call to `Date.parse(str)` parses the string in the given format and returns the timestamp (number of milliseconds from 1 Jan 1970 UTC+0). If the format is invalid, returns `NaN`.
-
-For instance:
-
-```js run
 let ms = Date.parse('2012-01-26T13:51:50.417-07:00');
+alert(ms); // timestamp in milliseconds
 
-alert(ms); // 1327611110417  (timestamp)
-```
-
-We can instantly create a `new Date` object from the timestamp:
-
-```js run
+// Create a date from the timestamp
 let date = new Date( Date.parse('2012-01-26T13:51:50.417-07:00') );
-
 alert(date);
 ```
 
-## Summary
+If the string format is wrong, `Date.parse()` returns `NaN`.
 
-- Date and time in JavaScript are represented with the [Date](mdn:js/Date) object. We can't create "only date" or "only time": `Date` objects always carry both.
-- Months are counted from zero (yes, January is a zero month).
-- Days of week in `getDay()` are also counted from zero (that's Sunday).
-- `Date` auto-corrects itself when out-of-range components are set. Good for adding/subtracting days/months/hours.
-- Dates can be subtracted, giving their difference in milliseconds. That's because a `Date` becomes the timestamp when converted to a number.
-- Use `Date.now()` to get the current timestamp fast.
+## Quick Recap
 
-Note that unlike many other systems, timestamps in JavaScript are in milliseconds, not in seconds.
+**Creating dates:**
+* `new Date()` - current date and time
+* `new Date(milliseconds)` - from timestamp
+* `new Date(year, month, date, ...)` - from parts (remember: month starts at 0!)
+* `new Date("string")` - from string
 
-Sometimes we need more precise time measurements. JavaScript itself does not have a way to measure time in microseconds (1 millionth of a second), but most environments provide it. For instance, browser has [performance.now()](mdn:api/Performance/now) that gives the number of milliseconds from the start of page loading with microsecond precision (3 digits after the point):
+**Getting information:**
+* `getFullYear()`, `getMonth()`, `getDate()`, `getHours()`, etc.
+* `getDay()` - day of week (0 = Sunday)
+* `getTime()` - get timestamp
+* Add "UTC" for UTC versions: `getUTCHours()`, etc.
 
-```js run
-alert(`Loading started ${performance.now()}ms ago`);
-// Something like: "Loading started 34731.26000000001ms ago"
-// .26 is microseconds (260 microseconds)
-// more than 3 digits after the decimal point are precision errors, only the first 3 are correct
-```
+**Setting information:**
+* `setFullYear()`, `setMonth()`, `setDate()`, `setHours()`, etc.
+* `setTime(milliseconds)` - set entire date
 
-Node.js has `microtime` module and other ways. Technically, almost any device and environment allows to get more precision, it's just not in `Date`.
+**Important notes:**
+* Months start at 0 (January = 0, December = 11)
+* Days of week start at 0 (Sunday = 0, Saturday = 6)
+* JavaScript automatically fixes invalid dates
+* Dates can be subtracted to get time differences
+* Timestamps are in milliseconds, not seconds
+* Use `Date.now()` for quick current timestamp
+
+Dates are powerful tools for working with time in your programs!
